tests/baselines/reference/symbolProperty27.errors.txt
symbolProperty27.ts(8,5): error TS2416: Property '[Symbol.toStringTag]' in type 'C2' is not assignable to the same property in base type 'C1'.
  Type '() => string' is not assignable to type '() => {}'.
    Type 'string' is not assignable to type '{}'.


==== symbolProperty27.ts (1 errors) ====
    class C1 {
        [Symbol.toStringTag]() {
            return {};
        }
    }
    
    class C2 extends C1 {
        [Symbol.toStringTag]() {
        ~~~~~~~~~~~~~~~~~~~~
!!! error TS2416: Property '[Symbol.toStringTag]' in type 'C2' is not assignable to the same property in base type 'C1'.
!!! error TS2416:   Type '() => string' is not assignable to type '() => {}'.
!!! error TS2416:     Type 'string' is not assignable to type '{}'.
            return "";
        }
    }